--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -10,6 +10,9 @@
       <ion-col text-center>
         Bienvenida/o
         <p>Tu correo electrónico es <strong>{{ userDetail }}</strong></p>
+        <a routerLink="/products">
+          Ver listado de productos
+        </a>
       </ion-col>
     </ion-row>
 
